# OWApp-Benchmarking-Suite

./: .gitignore  README.md
BenchmarkSuite/: CompileScript.sh  DownloadScript.sh  RunningScript.sh  ToolsScript.sh
OWApp/apk/ObfuscApp/: MASTG-TEST0002.apk  MASTG-TEST0006.apk  MASTG-TEST0011.apk  MASTG-TEST0013.apk  MASTG-TEST0014.apk  MASTG-TEST0015.apk  MASTG-TEST0016.apk  MASTG-TEST0017.apk  MASTG-TEST0018.apk  MASTG-TEST0019.apk  (+23 more)
OWApp/src/Code/MASTG-TEST0044/app/src/main/cpp/: CMakeLists.txt
apk/: MASTG-TEST0005.txt  MASTG-TEST0024.txt  MASTG-TEST0029.txt  MASTG-TEST0046.json
lib/: sum.cpp  sum.h
not_completed_test/MASTG-TEST0042/: build.gradle.kts  settings.gradle.kts
owasp/src/Code/MASTG-TEST0044/app/: CMakeLists.txt  build.gradle.kts
owasp/src/Code/MASTG-TEST0044/app/src/main/: AndroidManifest.xml
owasp/src/Code/MASTG-TEST0044/app/src/main/cpp/: mastg_test0044.cpp
owasp/src/Code/MASTG-TEST0044/app/src/main/res/layout/: activity_main.xml
service/app/: build.gradle.kts
src/EXPLOIT-MASTG-TEST0032/: ex.py
src/MASTG-TEST0001/: README.md  settings.gradle.kts
src/MASTG-TEST0004/: settings.gradle
src/MASTG-TEST0006/: MASTG-TEST0006.md  settings.gradle.kts
src/MASTG-TEST0012/: settings.gradle.kts
src/MASTG-TEST0014/: settings.gradle.kts
src/MASTG-TEST0021/: settings.gradle.kts
src/MASTG-TEST0023/: settings.gradle.kts
src/MASTG-TEST0027/: settings.gradle.kts
src/MASTG-TEST0038/: settings.gradle.kts
src/MASTG-TEST0039/: MASTG-TEST0039.md
src/MASTG-TEST0046/: settings.gradle.kts
src/MASTGTEST0015/: settings.gradle.kts
(+71589 files in other folders)
